# bingo-leptos

./: Cargo.toml
.github/workflows/: deploy-gh-pages.yml  gh-pages-deploy.yml
src/: main.rs  types.rs
src/components/: custom.rs  game_list.rs  glitched_text.rs  header.rs  mod.rs  premade.rs  root.rs  spinner.rs
src/styles/: game_list.scss  glitched_text.scss  header.scss  premade.scss  root.scss
