[package]
name = "bingo-leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.7.8", features = ["nightly"] }
turf = "0.9.5"

[package.metadata.turf]
load_paths = ["src/styles"]
