[package]
name = "bingo-leptos"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.8", features = ["csr", "nightly"] }
leptos_router = { version = "0.7.8", features = ["nightly"] }
reqwest-wasm = "0.11.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
turf = "0.9.5"

[package.metadata.turf]
load_paths = ["src/styles"]
